<resources>
    <string name="app_name">DesignDay</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="forgot_password">forgot password</string>
    <string name="sign_in">sign in</string>
    <string name="create_new_account">create new account</string>
    <string name="is_your_first_time_here">is your first time here?</string>
</resources>
