<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    >

    <ImageView
        android:id="@+id/relative_imageciew_demo"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:src="@drawable/nemo"
        android:layout_centerHorizontal="true"
        />
    <EditText
        android:id="@+id/relative_edittext_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/relative_imageciew_demo"
        android:hint="@string/username"
        />
    <EditText
        android:id="@+id/relative_edittext_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/relative_edittext_username"
        android:hint="@string/password"
        />

    <TextView
        android:id="@+id/forgot_password_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/relative_edittext_password"
        android:text="@string/forgot_password"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/forgot_password_link"
        android:hint="@string/sign_in"
        android:background="@color/colorAccent"
        android:textColorHint="@android:color/white"
        />

    <RelativeLayout
        android:id="@+id/relative_viewgroup_firsttime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/is_your_first_time_here"
            android:layout_below="@id/relative_viewgroup_firsttime"
            />


    </RelativeLayout>

</RelativeLayout>