<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    >

    <ImageView
        android:id="@+id/linear_imageview_nemo"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/nemo"/>

    <EditText
        android:id="@+id/linear_edittext_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:inputType="text"/>

    <EditText
        android:id="@+id/linear_edittext_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"/>

    <TextView
        android:layout_marginTop="16dp"
        android:id="@+id/linear_textview_forgotpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textColor="@color/colorPrimaryDark"/>

    <Button
        android:layout_marginTop="16dp"
        android:id="@+id/linear_button_signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/sign_in"
        android:background="@color/colorAccent"
        android:textColorHint="@android:color/white"/>

    <LinearLayout
        android:gravity="center_horizontal"
        android:id="@+id/linear_linearlayout_createnewaccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Is this your first time here?"/>

        <TextView
            android:id="@+id/linear_textview_createnewaccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_new_account"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:layout_marginLeft="8dp"/>
    </LinearLayout>
</LinearLayout>